fix(storyteller): story teller icon styles and alignment[#770] (#780)

--- a/eds/blocks/storyteller/storyteller.css
+++ b/eds/blocks/storyteller/storyteller.css
@@ -64,6 +64,10 @@
     font-size: var(--font-0);
   }
 
+  span.icon img {
+    filter: var(--theme-color);
+  }
+
   img, video {
     block-size: 100%;
     inline-size: 100%;
@@ -247,4 +251,36 @@
   mask: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iMTQiIHZpZXdCb3g9IjAgMCAxMiAxNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZmlsbC1ydWxlPSJldmVub2RkIiBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Ik0wIDBINVYxNEgwVjBaTTEyIDBIN1YxNEgxMlYwWiIgZmlsbD0iIzE1MTUxNSIvPgo8L3N2Zz4K');
   mask-size: cover;
   position: absolute;
+}
+
+/* Content and Icon styles */
+.content p:has(> span.icon):nth-of-type(n+2) {
+  block-size: 0;
+  margin: 0;
+  position: relative;
+}
+
+/* Position the icon absolutely */
+.content p:has(> span.icon):nth-of-type(n+2) span.icon {
+  inset-block-start: 0.2em;
+  inset-inline-start: 0;
+  position: absolute;
+}
+
+/* Push h3 and p to the right of the icon */
+.content h3:nth-of-type(n+1),
+.content h3:nth-of-type(n+1) + p {
+  inline-size: 70%;
+  line-height: 1.35;
+  margin-block-end: var(--space-6);
+  margin-inline-start: 70px;
+}
+
+.content h3:nth-of-type(n+1) {
+  font-weight: var(--calcite-font-weight-bold);
+  margin-block: var(--space-1);
+}
+
+.content p:nth-last-of-type(2) {
+  margin-block-end: var(--space-10);
 }
